# embedded-codegen

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  pytest.ini
.github/workflow/: ci.yaml
cli/: main.py
core/: config.py  generator.py  ir_generator.py
core/ast/: builder.py  nodes.py
core/ir/: backend.py  codegen.py
core/peripherals/: .base.py.swo  .gpio.py.swo  .timer.py.swo  .uart.py.swo  __init__.py  base.py  gpio.py  timer.py  uart.py
core/templates/shared/: Makefile.j2  config.h.j2  hal.c.j2  hal.h.j2  main.c.j2  syscalls.c.j2
core/templates/shared/peripherals/: gpio.c.j2  gpio.h.j2  timer.c.j2  timer.h.j2  uart.c.j2  uart.h.j2
core/templates/targets/imx7/: board.dts.j2
core/templates/targets/stm32/: board.dts.j2
docs/: conf.py  index.rst  modules.rst
tests/: conftest.py  test_cli_errors.py  test_codegen.py  test_config.py  test_config_errors.py  test_golden_gpio.py  test_ir_generator.py  test_plugin.py  test_plugins_conditions.py
tests/golden/: gpio_expected.c
